# manel

./: LICENSE  README.md  manel.bat  manel.sh  pyproject.toml
manel/: __init__.py  cli.py  gui.py  models.py
manel/export_kindle/: __init__.py  exporter.py
manel/ingestion/: __init__.py  ingest.py
manel/sequencing/: __init__.py  sequencer.py
manel/ui/: __init__.py  editor.py
manel/utils/: preprocess.py
manel/validation/: __init__.py  validator.py
manel/vision/: __init__.py  detector.py
tests/: test_core.py
